samples/_failures_safe/1761006536_caad56_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4e469d38.c: In function ‘tokenize’:
./samples/SAFE/__tmp_4e469d38.c:154:9: error: expected declaration or statement at end of input
  154 |         } else {
      |         ^
./samples/SAFE/__tmp_4e469d38.c:154:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4e469d38.c:154:9: error: expected declaration or statement at end of input
